...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ui-sI-0BI">
                                                    <rect key="frame" x="329" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton" label="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="eku-mO-Vpk"/>
                                                        <constraint firstAttribute="height" constant="44" id="r4s-Dd-Kja"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                                    <color key="tintColor" red="0.96078431372549022" green="0.41960784313725491" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <connections>
                                    <outlet property="delegate" destination="EAJ-Ft-Xfd" id="0qd-YZ-L6c"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="juf-le-OUg">
                                <rect key="frame" x="9" y="9" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="9mo-Cx-4z8"/>
                                    <constraint firstAttribute="height" constant="48" id="nIz-LA-4bb"/>
                                </constraints>
                                <color key="tintColor" systemColor="systemYellowColor"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
